force-app/main/default/objects/AgencyCapacity__c/AgencyCapacity__c.object-meta.xml
<CustomObject>
    <label>不動産キャパ</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>不動産キャパNo</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>