force-app/main/default/objects/AgencyCapacity__c/fields/AgencyCapacityId__c.field-meta.xml
<CustomField>
    <fullName>AgencyCapacityId__c</fullName>
    <externalId>true</externalId>
    <label>不動産キャパID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>