force-app/main/default/objects/AgencyCapacity__c/fields/CapacityNum__c.field-meta.xml
<CustomField>
    <fullName>CapacityNum__c</fullName>
    <label>キャパ件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>