force-app/main/default/objects/AgencyCapacity__c/fields/DiscountNet__c.field-meta.xml
<CustomField>
    <fullName>DiscountNet__c</fullName>
    <label>割引ネット</label>
    <length>255</length>
    <type>Text</type>
</CustomField>