force-app/main/default/objects/AgencyCapacity__c/fields/RequestingFmNum__c.field-meta.xml
<CustomField>
    <fullName>RequestingFmNum__c</fullName>
    <label>依頼中件数(基幹)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>