force-app/main/default/objects/AgencyCapacity__c/fields/RequestingNewCommodity__c.field-meta.xml
<CustomField>
    <fullName>RequestingNewCommodity__c</fullName>
    <label>新商材</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>