force-app/main/default/objects/AgencyCapacity__c/fields/ReserveNum__c.field-meta.xml
<CustomField>
    <fullName>ReserveNum__c</fullName>
    <formula>CapacityNum__c  -  RequestingNum__c  -  RequestingFmNum__c  -  RequestingNewCommodity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>余力</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>